<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>screen_grab</name>
  <version>0.0.3</version>
  <description>Publish a screen capture as an Image</description>
  <maintainer email="wsacul@gmail.com">Lucas Walter</maintainer>
  <license>BSD</license>
  <url type="website">https://github.com/lucasw/screen_grab</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_export_depend>rmw</build_export_depend>

  <build_depend>builtin_interfaces</build_depend>
  <build_depend>rcl_interfaces</build_depend>
  <build_depend>rosidl_generator_cpp</build_depend>
  <build_depend>rosidl_typesupport_c</build_depend>
  <build_depend>rosidl_typesupport_cpp</build_depend>
  <build_export_depend>builtin_interfaces</build_export_depend>
  <build_export_depend>rcl_interfaces</build_export_depend>
  <build_export_depend>rosidl_generator_cpp</build_export_depend>
  <build_export_depend>rosidl_typesupport_c</build_export_depend>
  <build_export_depend>rosidl_typesupport_cpp</build_export_depend>

  <depend>rcl</depend>
  <depend>rmw_implementation</depend>

  <exec_depend>ament_cmake</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
